@@ -111,18 +111,16 @@ Server::format (void)
 }
 
 int
-Server::init (int argc,
-              char **argv)
+Server::init (int argc, ACE_TCHAR *argv[])
 {
   try
     {
-
       PortableServer::POAManager_var mgr
         = TAO_AV_CORE::instance ()->poa ()->the_POAManager ();
 
       mgr->activate ();
 
-      int result = this->parse_args (argc,argv);
+      int result = this->parse_args (argc, argv);
       if (result == -1)
         ACE_ERROR_RETURN  ((LM_ERROR,"parse args failed\n"),-1);
       // Initialize the naming services
@@ -187,9 +185,9 @@ Server::run (void)
 }
 
 int
-Server::parse_args (int argc,char **argv)
+Server::parse_args (int argc, ACE_TCHAR *argv[])
 {
-  ACE_Get_Opt opts (argc,argv,"f:p:");
+  ACE_Get_Opt opts (argc, argv, "f:p:");
 
   int c;
   while ((c = opts ()) != -1)
@@ -204,11 +202,10 @@ Server::parse_args (int argc,char **argv)
             }
           break;
         case 'p':
-          this->protocol_ = ACE_OS::strdup (opts.opt_arg ());
+          this->protocol_ = ACE_OS::strdup (ACE_TEXT_ALWAYS_CHAR (opts.opt_arg ()));
           break;
         default:
           ACE_ERROR_RETURN ((LM_ERROR,"Usage: server -f filename"),-1);
-
         }
     }
   return 0;
@@ -221,12 +218,9 @@ Server::file (void)
 }
 
 int
-main (int argc,
-      char **argv)
+ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 {
-
-  CORBA::ORB_var orb = CORBA::ORB_init (argc,
-                                        argv);
+  CORBA::ORB_var orb = CORBA::ORB_init (argc, argv);
 
   try
     {
@@ -246,7 +240,7 @@ main (int argc,
     }
 
   int result = 0;
-  result = FTP_SERVER::instance ()->init (argc,argv);
+  result = FTP_SERVER::instance ()->init (argc, argv);
   if (result < 0)
     ACE_ERROR_RETURN ((LM_ERROR,"FTP_SERVER::init failed\n"),1);
   result = FTP_SERVER::instance ()->run ();
